# yardsale-ai

./: .gitignore  README.md  pyrightconfig.json
backend/: .pre-commit-config.yaml  build.sh  config.py  main.py  pyproject.toml  start.py
backend/auth/: authorization_header_elements.py  dependencies.py  json_web_token.py
backend/db/: db.py  setup.sql
backend/llms/: core.py
backend/llms/prompts/: analysis.py  generate.py
backend/routes/: home.py  users.py
backend/users/: types.py  users.py
frontend/: .gitignore  index.html  package.json  vite.config.ts
frontend/sell-anything/: package.json
frontend/sell-anything/src/: App.tsx
frontend/src/: App.tsx  config.ts  main.tsx  types.ts  urls.ts
frontend/src/components/: ExportAsCsv.tsx  ExportButton.tsx  Footer.tsx  LandingPage.tsx  NavBar.tsx
frontend/src/components/media/: AudioRecorder.tsx  Camera.tsx  camera.ts
frontend/src/components/states/: CameraView.tsx  InitialView.tsx  LandingPageView.tsx  ProcessingView.tsx  ProductDescriptionView.tsx  ResultView.tsx
frontend/src/hooks/: useAuthenticatedFetch.ts  useBackendUser.ts  useImageLoader.ts  useMediaLoader.ts  useScrollToTop.ts  useStore.ts
